[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
lazy_static = "1.4.0"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "2023-01"
path = "src/bin/2023/01/main.rs"

[[bin]]
name = "2023-02"
path = "src/bin/2023/02/main.rs"

[[bin]]
name = "2023-03"
path = "src/bin/2023/03/main.rs"

[[bin]]
name = "2023-04"
path = "src/bin/2023/04/main.rs"

[[bin]]
name = "2023-05"
path = "src/bin/2023/05/main.rs"

[[bin]]
name = "2023-06"
path = "src/bin/2023/06/main.rs"
