[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
itertools = "0.12.0"
lazy_static = "1.4.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
priority-queue = "1.3.2"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "2023-01"
path = "src/bin/2023/01/main.rs"

[[bin]]
name = "2023-02"
path = "src/bin/2023/02/main.rs"

[[bin]]
name = "2023-03"
path = "src/bin/2023/03/main.rs"

[[bin]]
name = "2023-04"
path = "src/bin/2023/04/main.rs"

[[bin]]
name = "2023-05"
path = "src/bin/2023/05/main.rs"

[[bin]]
name = "2023-06"
path = "src/bin/2023/06/main.rs"

[[bin]]
name = "2023-07"
path = "src/bin/2023/07/main.rs"

[[bin]]
name = "2023-08"
path = "src/bin/2023/08/main.rs"

[[bin]]
name = "2023-09"
path = "src/bin/2023/09/main.rs"

[[bin]]
name = "2023-10"
path = "src/bin/2023/10/main.rs"

[[bin]]
name = "2023-11"
path = "src/bin/2023/11/main.rs"

[[bin]]
name = "2023-12"
path = "src/bin/2023/12/main.rs"

[[bin]]
name = "2023-13"
path = "src/bin/2023/13/main.rs"

[[bin]]
name = "2023-14"
path = "src/bin/2023/14/main.rs"

[[bin]]
name = "2023-15"
path = "src/bin/2023/15/main.rs"

[[bin]]
name = "2023-16"
path = "src/bin/2023/16/main.rs"

[[bin]]
name = "2023-17"
path = "src/bin/2023/17/main.rs"

[[bin]]
name = "2023-18"
path = "src/bin/2023/18/main.rs"

[[bin]]
name = "2023-19"
path = "src/bin/2023/19/main.rs"

[[bin]]
name = "2023-20"
path = "src/bin/2023/20/main.rs"

[[bin]]
name = "2023-21"
path = "src/bin/2023/21/main.rs"

[[bin]]
name = "2023-23"
path = "src/bin/2023/23/main.rs"

[[bin]]
name = "2023-24"
path = "src/bin/2023/24/main.rs"
